Fixed wrong height

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
   align-items: center;
   flex-direction: column;
   overflow-y: scroll;
-  max-height: calc(100vh - 80px);
+  max-height: calc(100vh - 150px);
   transition: 1s all;
 }
 
